# mrsa-workflow

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/mrsa_workflow/: Snakefile  __about__.py  __main__.py  genomes.csv  samples.csv  snk.yaml
src/mrsa_workflow/cli/: __init__.py
tests/: __init__.py
