[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mrsa-workflow"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "John Sundh", email = "john.sundh@scilifelab.se" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["snk-cli", "pandas"]

[project.urls]
Documentation = "https://github.com/John Sundh/mrsa-workflow#readme"
Issues = "https://github.com/John Sundh/mrsa-workflow/issues"
Source = "https://github.com/John Sundh/mrsa-workflow"

[project.scripts]
mrsa-workflow = "mrsa_workflow.cli:mrsa_workflow"

[tool.hatch.version]
path = "src/mrsa_workflow/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mrsa_workflow tests}"

[tool.coverage.run]
source_pkgs = ["mrsa_workflow", "tests"]
branch = true
parallel = true
omit = ["src/mrsa_workflow/__about__.py"]

[tool.coverage.paths]
mrsa_workflow = ["src/mrsa_workflow", "*/mrsa-workflow/src/mrsa_workflow"]
tests = ["tests", "*/mrsa-workflow/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-64", "osx-arm64", "linux-64"]

[tool.pixi.dependencies]
fastqc = "*"
seqtk = "*"
multiqc = "*"
bowtie2 = "*"
tbb = "*"
samtools = "*"
subread = ">=2"
bedtools = "*"
wget = "*"
curl = "*"

[tool.pixi.pypi-dependencies]
mrsa-workflow = { path = ".", editable = true }

[tool.pixi.tasks]
